refactored auth module and added logged user roles endpoint
